fix #9896 - "g" shortcut (UnGlueAction) doesn't work with self-crossing way (patch by Balaitous)
git-svn-id: http://josm.openstreetmap.de/svn/trunk@6959 0c6e7542-c601-0410-84e7-c038aed88b3b